--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -4,7 +4,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       working-directory: .
-
+    permissions:
+      id-token: write
+      contents: read
     name: Run Infracost
     steps:
       - name: Check out repository
@@ -14,6 +16,13 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_wrapper: false
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: eu-west-1
+          role-to-assume: arn:aws:iam::026569114733:role/test-github-actions-role
+          role-session-name: MySessionName
 
       - name: Terraform init
         run: terraform init
