--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -7,7 +7,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
-      issues: write
+      pull-requests: write
     name: Run Infracost
     steps:
       - name: Check out repository
