--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           terraform_wrapper: false
 
+      - name: Terraform init
+        run: terraform init
+        working-directory: ${{ env.working-directory }}
+
       - name: Terraform validate
         run: terraform validate
         working-directory: ${{ env.working-directory }}
