--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -14,9 +14,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_wrapper: false
+          terraform_version: 1.1.7
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
